feat: adding update user
