# api/internal/routes/routes.go
@@ -7,6 +7,7 @@ import (
 	"github.com/flaviogf/conduit/api/internal/middlewares"
 	"github.com/flaviogf/conduit/api/internal/newuser"
 	"github.com/flaviogf/conduit/api/internal/session"
+	"github.com/flaviogf/conduit/api/internal/updateuser"
 	"github.com/gorilla/mux"
 )
 
@@ -24,6 +25,8 @@ func NewHandler(r *mux.Router) http.Handler {
 	a.Use(middlewares.Authorize)
 
 	a.HandleFunc("/api/users", currentuser.CurrentUserHandler).Methods(http.MethodGet)
+
+	a.HandleFunc("/api/users", updateuser.UpdateUserHandler).Methods(http.MethodPut)
 
 	return r
 }
